--- a/pages/index.html
+++ b/pages/index.html
@@ -51,7 +51,7 @@
         <div class="header-main">
             <div class="header-wrape">
                 <!-- Logo -->
-                <a href="/" class="flex items-center gap-3 flex-shrink-0">
+                <a href="#" class="flex items-center gap-3 flex-shrink-0 p-20">
                     <img src="../assets/images/header-logo.png" alt="Logo" class="h-[60px] w-auto">
                 </a>
 
@@ -85,7 +85,7 @@
 
                 <!-- Mobile Menu Button -->
                 <button id="mobileMenuBtn" type="button"
-                    class="lg:hidden inline-flex items-center justify-center p-2 rounded-md border-0 bg-transparent cursor-pointer"
+                    class="mobile-menu-btn inline-flex items-center justify-center p-20 rounded-md border-0 bg-transparent cursor-pointer"
                     aria-label="Toggle navigation">
                     <svg width="24" height="24" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_10067_5283)">
@@ -110,7 +110,7 @@
         </div>
 
         <!-- Mobile Menu -->
-        <div id="mobileMenu" class="lg:hidden px-6 pb-6 pt-3 space-y-4 text-[17px] font-medium hidden">
+        <div id="mobileMenu" class="mobile-menu px-6 pb-6 pt-3 space-y-4 text-[17px] font-medium hidden">
             <a href="#" class="block py-2 border-b">Home</a>
             <a href="#" class="block py-2 border-b">About Us</a>
             <a href="#" class="block py-2 border-b">Services</a>
@@ -402,7 +402,7 @@
         </section>
 
         <!-- ================= HISTORY ================= -->
-        <!-- <section id="history-section" class="history-section-main">
+         <section id="history-section" class="history-section-main">
 
             <div class="history-top-flex">
                 <div class="flex items-center gap-12">
@@ -603,10 +603,10 @@
                 </div>
             </div>
 
-        </section> -->
+        </section> 
 
         <!-- ================= GRID ================= -->
-        <!-- <section class="grid-main">
+         <section class="grid-main">
             <div class="grid-main-wrapper">
                 <div class="top-row-content">
                     <div class="grid-content">
@@ -688,10 +688,10 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section> 
 
         <!-- ================= OUR TEAM ================= -->
-        <!-- <section class="bg-white py-16 md:py-24">
+         <section class="bg-white py-16 md:py-24">
             <div class="max-w-6xl lg:max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
                 
@@ -765,7 +765,7 @@
 
                 </div>
             </div>
-        </section> -->
+        </section> 
 
         <!-- TRUSTED BY LEADING BRANDS -->
         <section class="w-full mx-w-1920 bg-[linear-gradient(180deg,#D82626_0%,#0055A4_52.4%,rgba(0,85,164,0)_100%)]">
