Update Header CSS

--- a/pages/index.html
+++ b/pages/index.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Navigation (Desktop) -->
-                <nav class="header-nev">
+                <nav class="header-nev max-1199:hidden!">
                     <a href="#" class="font-bold">Home</a>
                     <a href="#" class="transition">About Us</a>
                     <a href="#" class="transition">Services</a>
@@ -65,7 +65,7 @@
                 </nav>
 
                 <!-- Right Buttons (Desktop) -->
-                <div class="header-button">
+                <div class="header-button max-1199:hidden!">
                     <!-- Login Button -->
                     <a href="#" class="header-red-button">
                         <span class="text-[17px]">
