--- a/pages/index2.html
+++ b/pages/index2.html
@@ -221,8 +221,8 @@
         </section>
 
         <!-- Our Brands -->
-         <section class="testimonial-section-main">
-            <div class="testimonial-inner-wrapper">
+         <section class="our-brands-section-main">
+            <div class="our-brands-inner-wrapper">
 
                 <!-- TITLE -->
                 <div class="brands-heading">
