Update Header Code

--- a/pages/index.html
+++ b/pages/index.html
@@ -402,7 +402,7 @@
         </section>
 
         <!-- ================= HISTORY ================= -->
-        <section id="history-section" class="history-section-main">
+        <section id="history-section" class="history-section-main w-full! overflow-hidden">
 
             <div class="history-top-flex">
                 <div class="flex items-center gap-12">
@@ -606,7 +606,7 @@
         </section>
 
         <!-- ================= GRID ================= -->
-        <section class="grid-main">
+        <section class="grid-main overflow-hidden">
             <div class="grid-main-wrapper">
                 <div class="top-row-content">
                     <div class="grid-content">
@@ -691,7 +691,7 @@
         </section>
 
         <!-- ================= OUR TEAM ================= -->
-        <section class="bg-white py-16 md:py-24">
+        <section class="bg-white py-16 md:py-24 overflow-hidden">
             <div class="max-w-6xl lg:max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
 
