--- a/pages/index.html
+++ b/pages/index.html
@@ -186,90 +186,84 @@
                     <div class="swiper-wrapper text-white font-semibold">
 
                         <!-- Slide 1 -->
-                        <div
-                            class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] md:border-r border-white/30">
+                        <div class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] border-r border-white/30 last:border-r-0">
                             <div class="flex items-center justify-center gap-12 md:gap-10">
                                 <span class="leading-none shrink-0">
                                     <img src="../assets/images/truck-icon.svg" alt="Truck"
                                         class="w-28 h-28 md:w-25 md:h-25" />
                                 </span>
                                 <span
-                                    class="text-sm sm:text-base md:text-[20px] leading-tight md:leading-[26px] text-center">
+                                    class="text-20 stext-10 md:text-15 lg:text-10 leading-tight md:leading-[26px] text-center">
                                     On-Time Delivery
                                 </span>
                             </div>
                         </div>
 
                         <!-- Slide 2 -->
-                        <div
-                            class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] md:border-r border-white/30">
+                        <div class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] border-r border-white/30 last:border-r-0">
                             <div class="flex items-center justify-center gap-12 md:gap-10">
                                 <span class="leading-none shrink-0">
                                     <img src="../assets/images/factory-icon.svg" alt="Factory"
                                         class="w-28 h-28 md:w-25 md:h-25" />
                                 </span>
                                 <span
-                                    class="text-sm sm:text-base md:text-[20px] leading-tight md:leading-[26px] text-center">
+                                    class="text-sm sm:text-10 md:text-15 lg:text-10 leading-tight md:leading-[26px] text-center">
                                     High-Volume Production
                                 </span>
                             </div>
                         </div>
 
                         <!-- Slide 3 -->
-                        <div
-                            class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] md:border-r border-white/30">
+                        <div class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] border-r border-white/30 last:border-r-0">
                             <div class="flex items-center justify-center gap-12 md:gap-10">
                                 <span class="leading-none shrink-0">
                                     <img src="../assets/images/hand-icon.svg" alt="Collaboration"
                                         class="w-28 h-28 md:w-25 md:h-25" />
                                 </span>
                                 <span
-                                    class="text-sm sm:text-base md:text-[20px] leading-tight md:leading-[26px] text-center">
+                                    class="text-sm sm:text-base md:text-10 lg:text-10 leading-tight md:leading-[26px] text-center">
                                     Client Collaboration
                                 </span>
                             </div>
                         </div>
 
                         <!-- Slide 4 -->
-                        <div
-                            class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] md:border-r border-white/30">
+                        <div class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] border-r border-white/30 last:border-r-0">
                             <div class="flex items-center justify-center gap-12 md:gap-10">
                                 <span class="leading-none shrink-0">
                                     <img src="../assets/images/medul-icon.svg" alt="Quality Control"
                                         class="w-28 h-28 md:w-25 md:h-25" />
                                 </span>
                                 <span
-                                    class="text-sm sm:text-base md:text-[20px] leading-tight md:leading-[26px] text-center">
+                                    class="text-sm sm:text-10 md:text-15 lg:text-10 leading-tight md:leading-[26px] text-center">
                                     Certified Quality Control
                                 </span>
                             </div>
                         </div>
 
                         <!-- Duplicate 1 -->
-                        <div
-                            class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] md:border-r border-white/30">
+                        <div class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] border-r border-white/30 last:border-r-0">
                             <div class="flex items-center justify-center gap-12 md:gap-10">
                                 <span class="leading-none shrink-0">
                                     <img src="../assets/images/truck-icon.svg" alt="Truck"
                                         class="w-28 h-28 md:w-25 md:h-25" />
                                 </span>
                                 <span
-                                    class="text-sm sm:text-base md:text-[20px] leading-tight md:leading-[26px] text-center">
+                                    class="text-sm sm:text-10 md:text-15 lg:text-10 leading-tight md:leading-[26px] text-center">
                                     On-Time Delivery
                                 </span>
                             </div>
                         </div>
 
                         <!-- Duplicate 2 -->
-                        <div
-                            class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] md:border-r border-white/30">
+                        <div class="swiper-slide flex items-center justify-center px-4 sm:px-6 md:px-7 lg:px-[28px] border-r border-white/30 last:border-r-0">
                             <div class="flex items-center justify-center gap-12 md:gap-10">
                                 <span class="leading-none shrink-0">
                                     <img src="../assets/images/factory-icon.svg" alt="Factory"
                                         class="w-28 h-28 md:w-25 md:h-25" />
                                 </span>
                                 <span
-                                    class="text-sm sm:text-base md:text-[20px] leading-tight md:leading-[26px] text-center">
+                                    class="text-sm sm:text-10 md:text-15 lg:text-10 leading-tight md:leading-[26px] text-center">
                                     High-Volume Production
                                 </span>
                             </div>
@@ -280,11 +274,89 @@
             </div>
         </section>
 
+        <!-- ================= ABOUT ================= -->
+        <section class="about-main">
+            <div class="px-70 max-1199:px-40 max-576:px-20">
+                <div class="about-wrape">
+                    <div class="about-main-img">
+                        <!-- BIG IMAGE -->
+                        <div class="about-big-image">
+                            <img src="../assets/images/full-frame.png" alt="Event" />
+                        </div>
+                        <!-- FRONT WHITE CARD + CLIPPED TRUCK IMAGE -->
+                        <!-- <div class="about-clip-path-card">
+                            <div class="about-clip-path-card-wrap">
+                                <img src="../assets/images/img-with-con2.webp" alt="Truck"
+                                    class="w-full h-full object-cover" />
+                            </div>
+                        </div> -->
+                    </div>
+                    <!-- RIGHT : text content -->
+                    <div class="text-content-main">
+                        <!-- ABOUT US label -->
+                        <div class="about-label">
+                            <img src="../assets/images/black-truck.svg" alt="Truck icon" />
+                            <span> About Us </span>
+                        </div>
+                        <!-- Title: 44px, bold -->
+                        <h2>
+                            Delivering Value Through Smart<br />
+                            Logistics Innovation
+                        </h2>
+                        <!-- Description: 18px, line-height 34px -->
+                        <p class="about-main-description">
+                            Kataria is a pioneer and leader in the marketing, supply chain and
+                            warehouse management in India. It was the revolutionary approach
+                            adopted by Kataria that helped launch many path-breaking initiatives
+                            in the logistics segment and many were the firsts for the Indian
+                            market. In a span of 22 years, Kataria has consistently explored
+                            various ways to bring premium value to the customer, always setting
+                            benchmarks in quality of service, speed and customer satisfaction. Our
+                            entrepreneurial spirit, business acumen.
+                        </p>
+                        <!-- Bullet list frame: width 448, vertical gap 18px -->
+                        <div class="bullat-list-main">
+                            <ul>
+                                <li>
+                                    <img src="../assets/images/right-icon.svg" alt="check icon" />
+                                    <p>
+                                        Seamless Distribution Network
+                                    </p>
+                                </li>
+                                <li>
+                                    <img src="../assets/images/right-icon.svg" alt="check icon" />
+                                    <p>
+                                        Advanced Cold Chain Management
+                                    </p>
+                                </li>
+                                <li>
+                                    <img src="../assets/images/right-icon.svg" alt="check icon" />
+                                    <p>
+                                        Smart Packaging &amp; Repacking Solutions
+                                    </p>
+                                </li>
+                                <li>
+                                    <img src="../assets/images/right-icon.svg" alt="check icon" />
+                                    <p>
+                                        Technology-Driven Warehouse Operations
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- Button: width 144, height 54, radius 100, margin-top 50 -->
+                        <button class="about-main-button">
+                            Learn More
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
 
-          <!-- Our Brands -->
+
+        <!-- Our Brands -->
         <section class="our-brands-section-main">
             <div class="our-brands-inner-wrapper">
 
