--- a/pages/index.html
+++ b/pages/index.html
@@ -179,7 +179,7 @@
             </div>
         </section>
 
-        <!-- ================= SERVICE SLIDER ================= -->
+        <!-- ================= SERVICE SLIDER ====== -->
         <section class="service-slider-main bg-[#0b4cad] py-6 md:py-8">
             <div class="mx-auto max-w-[1920px] px-4 sm:px-6 lg:px-8">
                 <div class="swiper featureSwiper">
@@ -274,7 +274,7 @@
             </div>
         </section>
 
-        <!-- ================= ABOUT ================= -->
+        <!-- ================= ABOUT =============== -->
         <section class="about-main">
             <div class="px-70 max-1199:px-40 max-576:px-20">
                 <div class="about-wrape">
@@ -347,6 +347,83 @@
                         <button class="about-main-button">
                             Learn More
                         </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ================= MAP ================= -->
+        <section class="map-main">
+            <!-- Main container: 1920 x 996 -->
+            <div class="map-wrape">
+                <div class="map-sub-title">
+                    <div class="flex items-center gap-6 mb-4">
+                        <img src="../assets/images/white-truck.svg" alt="truck" />
+                        <p
+                            class="font-onest font-medium text-[14px] leading-[18px] tracking-[1px] uppercase text-white">
+                            Connecting the nation efficiently
+                        </p>
+                    </div>
+                    <h2 class="font-plusJakarta font-bold text-[44px] leading-[55px] text-white capitalize">
+                        Our Strong Distribution Network Across India
+                    </h2>
+                </div>
+                <!-- CENTER: Map -->
+                <div class="center-map">
+                    <img src="../assets/images/Map.png" alt="Distribution map" class="w-full h-full object-contain" />
+                </div>
+
+                <!-- RIGHT TOP: Short description -->
+                <div class="short-description">
+                    <p class="font-Onest font-normal text-[18px] leading-[34px] text-white capitalize">
+                        Driven by technology and trust, our network continues to expand, bridging
+                        distances and building lasting business relationships nationwide.
+                    </p>
+                </div>
+
+                <!-- RIGHT BOTTOM: Long description -->
+                <div class="long-description">
+                    <p class="font-Onest font-normal text-[18px] leading-[34px] text-white capitalize">
+                        Distribution is one of the four elements of marketing mix. Kataria
+                        Enterprise involved in the process of making a product available to the
+                        large population network. Kataria Enterprise having state-of-art
+                        distribution network management system to deliver, product placement and
+                        product promotion. Kataria Enterprise have made product distribution
+                        network in India's 5 major state covering 7000 villages, 400 cities, 70
+                        mega mall and over 12 crore consumers.
+                    </p>
+                </div>
+
+                <!-- BOTTOM LEFT: Stats group (5+ / 7000+ / 400+) -->
+                <div id="distribution-stats" class="stats-group">
+                    <!-- Stat 1 -->
+                    <div class="stats-flex">
+                        <span class="font-plusJakarta font-bold text-[40px] leading-[48px] text-white">
+                            <span class="counter" data-target="5">0</span>+
+                        </span>
+                        <span class="font-onest font-medium text-[14px] leading-[18px] text-white/90">
+                            State Covering
+                        </span>
+                    </div>
+
+                    <!-- Stat 2 -->
+                    <div class="stats-flex">
+                        <span class="font-plusJakarta font-bold text-[40px] leading-[48px] text-white">
+                            <span class="counter" data-target="7000">0</span>+
+                        </span>
+                        <span class="font-onest font-medium text-[14px] leading-[18px] text-white/90">
+                            Villages
+                        </span>
+                    </div>
+
+                    <!-- Stat 3 -->
+                    <div class="stats-flex">
+                        <span class="font-plusJakarta font-bold text-[40px] leading-[48px] text-white">
+                            <span class="counter" data-target="400">0</span>+
+                        </span>
+                        <span class="font-onest font-medium text-[14px] leading-[18px] text-white/90">
+                            Cities
+                        </span>
                     </div>
                 </div>
             </div>
