--- a/pages/index.html
+++ b/pages/index.html
@@ -357,14 +357,13 @@
             <!-- Main container: 1920 x 996 -->
             <div class="map-wrape">
                 <div class="map-sub-title">
-                    <div class="flex items-center gap-6 mb-4">
+                    <div class="subtitle-map">
                         <img src="../assets/images/white-truck.svg" alt="truck" />
-                        <p
-                            class="font-onest font-medium text-[14px] leading-[18px] tracking-[1px] uppercase text-white">
+                        <p class="font-body font-medium text-14 leading-[18px] tracking-[1px] uppercase text-white">
                             Connecting the nation efficiently
                         </p>
                     </div>
-                    <h2 class="font-plusJakarta font-bold text-[44px] leading-[55px] text-white capitalize">
+                    <h2 class="heading-mainafter">
                         Our Strong Distribution Network Across India
                     </h2>
                 </div>
@@ -424,6 +423,207 @@
                         <span class="font-onest font-medium text-[14px] leading-[18px] text-white/90">
                             Cities
                         </span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ================= HISTORY ================= -->
+        <section id="history-section" class="history-section-main w-full! overflow-hidden">
+            <div class="history-top-flex">
+                <div class="flex items-center gap-12">
+                    <img src="../assets/images/black-truck.svg" alt="" class="w-[22px] h-[22px]" />
+                    <p class="sub-title-history">Our History</p>
+                </div>
+                <h2 class="font-plus font-bold text-[44px] leading-[55px] text-black">
+                    The Story Behind Our Growth
+                </h2>
+                <div class="relative mt-[12px] year-tabs-container">
+                    <div class="absolute top-[6px] w-full h-[2px] bg-[#D82626]"></div>
+                    <span id="activeDot"
+                        class="absolute top-0 w-[13px] h-[13px] bg-[#D82626] rounded-full transition-all duration-300 ease-in-out"></span>
+                    <div id="yearWrapper" class="flex pl-[80px] text-[40px] top-[4px] gap-[140px] relative">
+                        <button class="year-tab text-[#8D8D8D] active text-[#D82626] font-plus"
+                            data-target="year-1989">1989</button>
+                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus"
+                            data-target="year-2002">2002</button>
+                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus"
+                            data-target="year-2010">2010</button>
+                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus"
+                            data-target="year-2016">2016</button>
+                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus"
+                            data-target="year-2024">2024</button>
+                    </div>
+
+                </div>
+            </div>
+            <div class="w-[1593px] h-[722px] relative">
+
+
+                <div id="year-1989" class="year-content flex gap-[24px] absolute inset-0">
+                    <div class="absolute left-0 top-0 w-[1205px] h-[722px] rounded-[16px] overflow-hidden">
+                        <img src="../assets/images/year-slider.png" class="object-cover" />
+                    </div>
+                    <div
+                        class="absolute left-[924px] top-[51px] w-[669px] h-[621px] flex flex-col items-start p-[50px] gap-[10px] bg-white rounded-[24px] shadow-[4.9464px_4.9464px_4.9464px_rgba(0,0,0,0.1)]">
+                        <h3 class="font-plus font-bold text-[30px] leading-[30px] mb-[15px]">The Beginning Of A
+                            Vision
+                        </h3>
+                        <p>The story of Kataria Enterprise began in 1989, when a determined entrepreneur, Mr.
+                            Vallabhbhai Kataria, laid the foundation of what would become one of India’s most
+                            reliable
+                            names in marketing, supply chain, and distribution management. Starting from humble
+                            beginnings in a small town in Gujarat, Mr. Vallabhbhai envisioned an enterprise that
+                            would
+                            bridge the gap between brands and markets bringing products efficiently, safely, and
+                            swiftly
+                            to every part of the country. </p>
+                        <p>At the time, logistics and distribution in India were fragmented and unorganized. Mr.
+                            Kataria’s vision went beyond transportation he dreamt of creating a structured and
+                            trustworthy distribution network that could transform how goods reached customers. With
+                            just
+                            a handful of vehicles and a small, dedicated team, he began building operations centered
+                            around the values of trust, reliability, and customer-first service.</p>
+                        <p>This was not just the beginning of a business it was the beginning of a philosophy. A
+                            belief
+                            that excellence, no matter how small the start, can grow into something truly
+                            transformational.</p>
+                    </div>
+                </div>
+
+
+                <div id="year-2002" class="year-content flex gap-[24px] absolute inset-0">
+                    <div class="absolute left-0 top-0 w-[1205px] h-[722px] rounded-[16px] overflow-hidden">
+                        <img src="../assets/images/year-slider.png" class="object-cover" />
+                    </div>
+                    <div class="absolute left-[924px] top-[51px] w-[669px] h-[621px]
+                        flex flex-col items-start p-[50px] gap-[10px]
+                        bg-white rounded-[24px]
+                        shadow-[4.9464px_4.9464px_4.9464px_rgba(0,0,0,0.1)]">
+                        <h3 class="font-plus font-bold text-[30px] leading-[30px] mb-[15px]">The Beginning Of A
+                            Vision
+                        </h3>
+                        <p>The story of Kataria Enterprise began in 1989, when a determined entrepreneur, Mr.
+                            Vallabhbhai Kataria, laid the foundation of what would become one of India’s most
+                            reliable
+                            names in marketing, supply chain, and distribution management. Starting from humble
+                            beginnings in a small town in Gujarat, Mr. Vallabhbhai envisioned an enterprise that
+                            would
+                            bridge the gap between brands and markets bringing products efficiently, safely, and
+                            swiftly
+                            to every part of the country. </p>
+                        <p>At the time, logistics and distribution in India were fragmented and unorganized. Mr.
+                            Kataria’s vision went beyond transportation he dreamt of creating a structured and
+                            trustworthy distribution network that could transform how goods reached customers. With
+                            just
+                            a handful of vehicles and a small, dedicated team, he began building operations centered
+                            around the values of trust, reliability, and customer-first service.</p>
+                        <p>This was not just the beginning of a business it was the beginning of a philosophy. A
+                            belief
+                            that excellence, no matter how small the start, can grow into something truly
+                            transformational.</p>
+                    </div>
+                </div>
+
+
+                <div id="year-2010" class="year-content flex gap-[24px] absolute inset-0">
+                    <div class="absolute left-0 top-0 w-[1205px] h-[722px] rounded-[16px] overflow-hidden">
+                        <img src="../assets/images/year-slider.png" class="object-cover" />
+                    </div>
+                    <div class="absolute left-[924px] top-[51px] w-[669px] h-[621px]
+                        flex flex-col items-start p-[50px] gap-[10px]
+                        bg-white rounded-[24px]
+                        shadow-[4.9464px_4.9464px_4.9464px_rgba(0,0,0,0.1)]">
+                        <h3 class="font-plus font-bold text-[30px] leading-[30px] mb-[15px]">The Beginning Of A
+                            Vision
+                        </h3>
+                        <p>The story of Kataria Enterprise began in 1989, when a determined entrepreneur, Mr.
+                            Vallabhbhai Kataria, laid the foundation of what would become one of India’s most
+                            reliable
+                            names in marketing, supply chain, and distribution management. Starting from humble
+                            beginnings in a small town in Gujarat, Mr. Vallabhbhai envisioned an enterprise that
+                            would
+                            bridge the gap between brands and markets bringing products efficiently, safely, and
+                            swiftly
+                            to every part of the country. </p>
+                        <p>At the time, logistics and distribution in India were fragmented and unorganized. Mr.
+                            Kataria’s vision went beyond transportation he dreamt of creating a structured and
+                            trustworthy distribution network that could transform how goods reached customers. With
+                            just
+                            a handful of vehicles and a small, dedicated team, he began building operations centered
+                            around the values of trust, reliability, and customer-first service.</p>
+                        <p>This was not just the beginning of a business it was the beginning of a philosophy. A
+                            belief
+                            that excellence, no matter how small the start, can grow into something truly
+                            transformational.</p>
+                    </div>
+                </div>
+
+
+                <div id="year-2016" class="year-content flex gap-[24px] absolute inset-0">
+                    <div class="absolute left-0 top-0 w-[1205px] h-[722px] rounded-[16px] overflow-hidden">
+                        <img src="../assets/images/year-slider.png" class="object-cover" />
+                    </div>
+                    <div class="absolute left-[924px] top-[51px] w-[669px] h-[621px]
+                        flex flex-col items-start p-[50px] gap-[10px]
+                        bg-white rounded-[24px]
+                        shadow-[4.9464px_4.9464px_4.9464px_rgba(0,0,0,0.1)]">
+                        <h3 class="font-plus font-bold text-[30px] leading-[30px] mb-[15px]">The Beginning Of A
+                            Vision
+                        </h3>
+                        <p>The story of Kataria Enterprise began in 1989, when a determined entrepreneur, Mr.
+                            Vallabhbhai Kataria, laid the foundation of what would become one of India’s most
+                            reliable
+                            names in marketing, supply chain, and distribution management. Starting from humble
+                            beginnings in a small town in Gujarat, Mr. Vallabhbhai envisioned an enterprise that
+                            would
+                            bridge the gap between brands and markets bringing products efficiently, safely, and
+                            swiftly
+                            to every part of the country. </p>
+                        <p>At the time, logistics and distribution in India were fragmented and unorganized. Mr.
+                            Kataria’s vision went beyond transportation he dreamt of creating a structured and
+                            trustworthy distribution network that could transform how goods reached customers. With
+                            just
+                            a handful of vehicles and a small, dedicated team, he began building operations centered
+                            around the values of trust, reliability, and customer-first service.</p>
+                        <p>This was not just the beginning of a business it was the beginning of a philosophy. A
+                            belief
+                            that excellence, no matter how small the start, can grow into something truly
+                            transformational.</p>
+                    </div>
+                </div>
+
+
+                <div id="year-2024" class="year-content flex gap-[24px] absolute inset-0">
+                    <div class="absolute left-0 top-0 w-[1205px] h-[722px] rounded-[16px] overflow-hidden">
+                        <img src="../assets/images/year-slider.png" class="object-cover" />
+                    </div>
+                    <div class="absolute left-[924px] top-[51px] w-[669px] h-[621px]
+                        flex flex-col items-start p-[50px] gap-[10px]
+                        bg-white rounded-[24px]
+                        shadow-[4.9464px_4.9464px_4.9464px_rgba(0,0,0,0.1)]">
+                        <h3 class="font-plus font-bold text-[30px] leading-[30px] mb-[15px]">The Beginning Of A
+                            Vision
+                        </h3>
+                        <p>The story of Kataria Enterprise began in 1989, when a determined entrepreneur, Mr.
+                            Vallabhbhai Kataria, laid the foundation of what would become one of India’s most
+                            reliable
+                            names in marketing, supply chain, and distribution management. Starting from humble
+                            beginnings in a small town in Gujarat, Mr. Vallabhbhai envisioned an enterprise that
+                            would
+                            bridge the gap between brands and markets bringing products efficiently, safely, and
+                            swiftly
+                            to every part of the country. </p>
+                        <p>At the time, logistics and distribution in India were fragmented and unorganized. Mr.
+                            Kataria’s vision went beyond transportation he dreamt of creating a structured and
+                            trustworthy distribution network that could transform how goods reached customers. With
+                            just
+                            a handful of vehicles and a small, dedicated team, he began building operations centered
+                            around the values of trust, reliability, and customer-first service.</p>
+                        <p>This was not just the beginning of a business it was the beginning of a philosophy. A
+                            belief
+                            that excellence, no matter how small the start, can grow into something truly
+                            transformational.</p>
                     </div>
                 </div>
             </div>
