--- a/pages/index2.html
+++ b/pages/index2.html
@@ -18,6 +18,106 @@
     <main class="">
         <!-- ================= HERO / BANNER ================= -->
 
+    <!-- ================= OUR TEAM ================= -->
+        <section class="bg-white py-16 md:py-24 overflow-hidden">
+            <div class="max-w-6xl lg:max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+
+
+                <div class="text-center mb-12 md:mb-16">
+                    <div class="flex items-center justify-center gap-6 mb-2">
+                        <img src="../assets/images/black-truck.svg" alt="Truck Icon" class="w-20 h-20 object-contain" />
+                        <p
+                            class="w-[80px] h-[17px] flex items-center font-body font-medium text-[14px] uppercase text-[#000000]">
+                            Our Team
+                        </p>
+                    </div>
+                    <h2
+                        class="mx-auto text-center font-heading font-bold text-[#D82626] capitalize text-[28px] sm:text-[34px] md:text-[44px] md:leading-[58px] w-full md:w-[797px]">
+                        Driving Food Distribution With Smart,
+                        Efficient Solutions
+                    </h2>
+                </div>
+
+
+
+                <div
+                    class="grid pt-70 pb-105 gap-[426px] sm:gap-[426px] sm:grid-cols-2 lg:grid-cols-4 justify-items-center">
+
+                    <div
+                        class="relative w-[398px] h-[550px] rounded-[30px] overflow-hidden shadow-[0_24px_60px_rgba(0,0,0,0.08)]">
+                        <img src="../assets/images/Vallabhbhai Kataria.webp" alt="Mr. Vallabhbhai Kataria"
+                            class="absolute inset-0 w-full h-full object-cover z-0" />
+                        <div
+                            class="absolute inset-0 z-10 bg-[linear-gradient(180.63deg,rgba(0,0,0,0)_69.24%,rgba(0,0,0,0.2)_75.59%,rgba(0,0,0,0.2)_98.74%)]">
+                        </div>
+                        <div
+                            class="absolute left-0 bottom-0 w-full h-[86px] bg-[#0055A4] rounded-b-[20px] z-20 flex flex-col justify-center items-start px-5 py-[15px] gap-[7px]">
+                            <p class="text-white font-heading text-[25px] pt-15 pl-20">
+                                Mr. Vallabhbhai Kataria
+                            </p>
+                            <p class="text-white/80 font-heading text-[14px] pb-15 pl-20">
+                                Founder &amp; Chairman
+                            </p>
+                        </div>
+                    </div>
+
+                    <div
+                        class="relative w-[398px] h-[550px] rounded-[30px] overflow-hidden shadow-[0_24px_60px_rgba(0,0,0,0.08)]">
+                        <img src="../assets/images/Paras V. Kataria.webp" alt="Mr. Paras V. Kataria"
+                            class="absolute inset-0 w-full h-full object-cover z-0" />
+                        <div
+                            class="absolute inset-0 z-10 bg-[linear-gradient(180.63deg,rgba(0,0,0,0)_69.24%,rgba(0,0,0,0.2)_75.59%,rgba(0,0,0,0.2)_98.74%)]">
+                        </div>
+                        <div
+                            class="absolute left-0 bottom-0 w-full h-[86px] bg-[#0055A4] rounded-b-[20px] z-20 flex flex-col justify-center items-start px-5 py-[15px] gap-[7px]">
+                            <p class="text-white font-heading text-[25px] pt-15 pl-20">Mr. Paras V. Kataria</p>
+                            <p class="text-white/80 font-heading text-[14px] pb-15 pl-20">
+                                Director – Operations &amp; Network Expansion
+                            </p>
+                        </div>
+                    </div>
+
+
+                    <div
+                        class="relative w-[398px] h-[550px] rounded-[30px] overflow-hidden shadow-[0_24px_60px_rgba(0,0,0,0.08)]">
+                        <div
+                            class="absolute inset-0 z-10 bg-[linear-gradient(180.63deg,rgba(0,0,0,0)_69.24%,rgba(0,0,0,0.2)_75.59%,rgba(0,0,0,0.2)_98.74%)]">
+                        </div>
+                        <img src="../assets/images/Rimal V. Kataria.webp" alt="Mr. Rimal V. Kataria"
+                            class="absolute inset-0 w-full h-full object-cover z-0" />
+                        <div
+                            class="absolute left-0 bottom-0 w-full h-[86px] bg-[#0055A4] rounded-b-[20px] z-20 flex flex-col justify-center items-start px-5 py-[15px] gap-[7px]">
+                            <p class="text-white font-heading text-[25px] pt-15 pl-20">Mr. Rimal V. Kataria</p>
+                            <p class="text-white/80 font-heading text-[14px] pb-15 pl-20">
+                                Director – Supply Chain &amp; Strategy
+                            </p>
+                        </div>
+                    </div>
+
+
+                    <div
+                        class="relative w-[398px] h-[550px] rounded-[30px] overflow-hidden shadow-[0_24px_60px_rgba(0,0,0,0.08)]">
+                        <div
+                            class="absolute inset-0 z-10 bg-[linear-gradient(180.63deg,rgba(0,0,0,0)_69.24%,rgba(0,0,0,0.2)_75.59%,rgba(0,0,0,0.2)_98.74%)]">
+                        </div>
+                        <img src="../assets/images/Rupesh Vadariya.webp" alt="Mr. Rupesh Vadariya"
+                            class="absolute inset-0 w-full h-full object-cover z-0" />
+                        <div
+                            class="absolute left-0 bottom-0 w-full h-[86px] bg-[#0055A4] rounded-b-[20px] z-20 flex flex-col justify-center items-start px-5 py-[15px] gap-[7px]">
+                            <p class="text-white font-heading text-[25px] pt-15 pl-20">Mr. Rupesh Vadariya</p>
+                            <p class="text-white/80 font-heading text-[14px] pb-15 pl-20">
+                                General Manager – Operations &amp; HR
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+
+
         <!-- Our Brands -->
         <section class="our-brands-section-main">
             <div class="our-brands-inner-wrapper">
@@ -351,8 +451,6 @@
 
             </div>
         </section>
-
-
 
 
 
