--- a/pages/index2.html
+++ b/pages/index2.html
@@ -18,6 +18,189 @@
     <main class="">
         <!-- ================= HERO / BANNER ================= -->
 
+        <!-- ================= OUR COMMITMENT ================= -->
+        <section
+            class="overflow-hidden bg-[linear-gradient(180deg,#003176_0%,#0055A4_35%,#ffffff_100%)] py-70 md:py-80">
+            <div class="max-w-1682 mx-auto px-20 sm:px-24 lg:px-40">
+
+                <!-- Top row: icon + label + heading + CTA -->
+                <div class="mb-70 flex flex-wrap items-center justify-between gap-30">
+                    <!-- Left: icon + label + heading -->
+                    <div class="flex flex-col gap-12 text-white">
+                        <div class="flex items-center gap-8">
+                            <img src="../assets/images/white-truck.svg" alt="Truck icon"
+                                class="w-20 h-20 object-contain" />
+                            <p class="font-body text-14 uppercase tracking-[0.08em]">
+                                Our Commitment
+                            </p>
+                        </div>
+
+                        <h2 class="font-heading font-bold
+                 text-28 md:text-40
+                 leading-[1.3] max-w-[630px]">
+                            Delivering Value Through Smart
+                            Logistics Innovation
+                        </h2>
+                    </div>
+
+                    <!-- Right: button -->
+                    <div class="w-full sm:w-auto flex justify-center sm:justify-end mt-20 sm:mt-0">
+                        <a href="#" class="inline-flex items-center justify-center
+                 px-32 py-14 rounded-[999px]
+                 bg-white text-[#D82626]
+                 font-body text-16 font-semibold
+                 shadow-[0_8px_20px_rgba(0,0,0,0.18)]
+                 whitespace-nowrap">
+                            Contact Now
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Cards -->
+                <div class="grid grid-cols-1 lg:grid-cols-3 gap-30">
+
+                    <!-- CARD 1 -->
+                    <article class="bg-white rounded-30 shadow-[0_24px_60px_rgba(0,0,0,0.08)]
+               px-30 py-40
+               flex flex-col items-center text-center">
+                        <div class="mb-24">
+                            <img src="../assets/images/our-mission.svg" alt="Mission icon"
+                                class="w-81 h-81 object-contain" />
+                        </div>
+
+                        <h3 class="font-heading font-semibold text-20 text-[#D82626] mb-20">
+                            Our Mission
+                        </h3>
+
+                        <div class="w-full h-px bg-[#E4E4E4] mb-30"></div>
+
+                        <p class="max-w-[432px] mx-auto
+                 font-default text-18 leading-[28px] text-[#8E8E8E]">
+                            The statement "Our Mission" reinforces that our two most important
+                            stakeholders are our customers and our people. To help our clients win
+                            by providing valueadded, cost effective and comprehensive services in
+                            marketing, warehouse, supply chain, human resources.
+                        </p>
+                    </article>
+
+                    <!-- CARD 2 -->
+                    <article class="bg-white rounded-30 shadow-[0_24px_60px_rgba(0,0,0,0.08)]
+               px-30 py-40
+               flex flex-col items-center text-center">
+                        <div class="mb-24">
+                            <img src="../assets/images/our-vision.svg" alt="Vision icon"
+                                class="w-81 h-81 object-contain" />
+                        </div>
+
+                        <h3 class="font-heading font-semibold text-20 text-[#D82626] mb-20">
+                            Our Vision
+                        </h3>
+
+                        <div class="w-full h-px bg-[#E4E4E4] mb-30"></div>
+
+                        <p class="max-w-[432px] mx-auto
+                 font-default text-18 leading-[28px] text-[#8E8E8E]">
+                            To be at the top of the distribution service by prompt, quick and
+                            reliable service with sophisticated technology, to meet and exceed the
+                            customer requirements. To be recognized as the most specialized group
+                            of professionals providing business services like Marketing.
+                        </p>
+                    </article>
+
+                    <!-- CARD 3 -->
+                    <article class="bg-white rounded-30 shadow-[0_24px_60px_rgba(0,0,0,0.08)]
+         px-30 py-40
+         flex flex-col items-center text-center">
+                        <div class="mb-24">
+                            <img src="../assets/images/daimond.svg" alt="Core value icon"
+                                class="w-81 h-81 object-contain" />
+                        </div>
+
+                        <h3 class="font-heading font-semibold text-20 text-[#D82626] mb-20">
+                            Our Core Value
+                        </h3>
+
+                        <div class="w-full h-px bg-[#E4E4E4] mb-30"></div>
+
+                        <!-- BULLET LIST -->
+                        <!--
+    Base:        1 column
+    >=640px:     2 columns
+    >=1024px:    1 column (full width)
+    >=1444px:    2 columns again
+  -->
+                        <div class="w-full
+           grid grid-cols-1 gap-y-10 gap-x-40
+           sm:grid-cols-2
+           lg:grid-cols-1
+           min-[1444px]:grid-cols-2">
+                            <!-- Column 1 -->
+                            <ul class="space-y-10 text-left">
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Working Together</span>
+                                </li>
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Superior Performance</span>
+                                </li>
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Care for our customers</span>
+                                </li>
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Ethical and moral conduct</span>
+                                </li>
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Customer Orientation</span>
+                                </li>
+                            </ul>
+
+                            <!-- Column 2 -->
+                            <ul class="space-y-10 text-left">
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Reliability and Efficiency</span>
+                                </li>
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Entrepreneurship</span>
+                                </li>
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Quality of Services</span>
+                                </li>
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Integrity</span>
+                                </li>
+                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
+                                    <span
+                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+                                    <span>Respect for People</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </article>
+
+
+                </div>
+            </div>
+        </section>
+
+
+
 
 
         <!-- ================= OUR TEAM ================= -->
