update our comitment section

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -108,91 +108,83 @@
                     </article>
 
                     <!-- CARD 3 -->
-                    <article class="bg-white rounded-30 shadow-[0_24px_60px_rgba(0,0,0,0.08)]
-         px-30 py-40
-         flex flex-col items-center text-center">
-                        <div class="mb-24">
-                            <img src="../assets/images/daimond.svg" alt="Core value icon"
-                                class="w-81 h-81 object-contain" />
-                        </div>
+<article class="bg-white rounded-30 shadow-[0_24px_60px_rgba(0,0,0,0.08)]
+    px-30 py-40 flex flex-col items-center text-center">
+    <div class="mb-24">
+        <img src="../assets/images/daimond.svg" alt="Core value icon"
+            class="w-81 h-81 object-contain" />
+    </div>
 
-                        <h3 class="font-heading font-semibold text-20 text-[#D82626] mb-20">
-                            Our Core Value
-                        </h3>
+    <h3 class="font-heading font-semibold text-20 text-[#D82626] mb-20">
+        Our Core Value
+    </h3>
 
-                        <div class="w-full h-px bg-[#E4E4E4] mb-30"></div>
+    <div class="w-full h-px bg-[#E4E4E4] mb-30"></div>
 
-                        <!-- BULLET LIST -->
-                        <!--
-    Base:        1 column
-    >=640px:     2 columns
-    >=1024px:    1 column (full width)
-    >=1444px:    2 columns again
-  -->
-                        <div class="w-full
-           grid grid-cols-1 gap-y-10 gap-x-40
-           sm:grid-cols-2
-           lg:grid-cols-1
-           min-[1444px]:grid-cols-2">
-                            <!-- Column 1 -->
-                            <ul class="space-y-10 text-left">
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Working Together</span>
-                                </li>
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Superior Performance</span>
-                                </li>
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Care for our customers</span>
-                                </li>
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Ethical and moral conduct</span>
-                                </li>
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Customer Orientation</span>
-                                </li>
-                            </ul>
+    <!-- LIST CONTAINER -->
+    <!-- keep layout exactly same except force 2 cols at 1440px+ -->
+    <!-- LIST CONTAINER -->
+<div class="w-full">
+    <ul class="
+        grid grid-cols-1 
+        min-[1440px]:grid-cols-2 
+        gap-y-10 gap-x-40
+        text-left
+    ">
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Working Together</span>
+        </li>
 
-                            <!-- Column 2 -->
-                            <ul class="space-y-10 text-left">
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Reliability and Efficiency</span>
-                                </li>
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Entrepreneurship</span>
-                                </li>
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Quality of Services</span>
-                                </li>
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Integrity</span>
-                                </li>
-                                <li class="flex items-start gap-10 font-default text-18 leading-[28px] text-[#4A4A4A]">
-                                    <span
-                                        class="mt-[9px] inline-block h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
-                                    <span>Respect for People</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </article>
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Superior Performance</span>
+        </li>
+
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Care for our customers</span>
+        </li>
+
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Ethical and moral conduct</span>
+        </li>
+
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Customer Orientation</span>
+        </li>
+
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Reliability and Efficiency</span>
+        </li>
+
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Entrepreneurship</span>
+        </li>
+
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Quality of Services</span>
+        </li>
+
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Integrity</span>
+        </li>
+
+        <li class="flex items-start gap-10 font-default text-[#8E8E8E] text-[18px] leading-[28px] font-normal">
+            <span class="mt-[9px] h-[9px] w-[9px] rounded-full bg-[#0055A4]"></span>
+            <span>Respect for People</span>
+        </li>
+    </ul>
+</div>
+
+</article>
+
 
 
                 </div>
