--- a/pages/index.html
+++ b/pages/index.html
@@ -161,18 +161,10 @@
                     </h1>
                     <div class="banner-content-one">
                         <p>
-                            Kataria Enterprise is a multi-services customer focused organization primarily focused on
-                            providing world-class customer services in areas of marketing management, supply chain
-                            management and warehouse management.
+                            We are your dedicated, multi-service partner focused on optimizing the critical layers of your business. We deliver world-class management solutions across three core areas: Marketing, Supply Chain, and Warehouse Operations. 
                         </p>
                         <p>
-                            Our entrepreneurial spirit, business acumen, sound domain knowledge and competent team
-                            enable us
-                            to deliver maximum value, efficiency and improved bottom lines to our corporate clients. We
-                            have
-                            been a proud team to be associated with some of the most renowned business houses
-                            like Balaji
-                            Wafers, Vadilal Ice-Cream and Coca-Cola.
+                            We are proud to have partnered with some of India’s most renowned business houses, including <strong>Balaji Wafers, Vadilal Ice-Cream, and Coca-Cola.</strong> Our track record speaks for itself.
                         </p>
                     </div>
                 </div>
